make java8 compatible, order of versions asc
Signed-off-by: Patrick Brueckner <pb@fino.digital>